@@ -3,6 +3,7 @@ from __future__ import absolute_import
 from ..datastructures import LRUCache
 from ..exceptions import ImproperlyConfigured
 from ..utils import cached_property
+from ..utils.encoding import str_to_bytes
 
 from .base import KeyValueStoreBackend
 
@@ -81,6 +82,12 @@ class CacheBackend(KeyValueStoreBackend):
                     "Unknown cache backend: %s. Please use one of the "
                     "following backends: %s" % (self.backend,
                                                 ", ".join(backends.keys())))
+
+    def get_key_for_task(self, task_id):
+        return str_to_bytes(self.task_keyprefix + task_id)
+
+    def get_key_for_taskset(self, taskset_id):
+        return str_to_bytes(self.taskset_keyprefix + taskset_id)
 
     def get(self, key):
         return self.client.get(key)
